--- a/index.html
+++ b/index.html
@@ -73,14 +73,14 @@
     <div class="section">
       <h2>Links</h2>
       <ul>
-        <li><a href="https://github.com/lut4" target="_blank">GitHub: @lut4</a></li>
-        <li><a href="mailto:deepak@lut4.com">Email: deepak@lut4.com</a></li>
-        <li><a href="https://linkedin.com/in/deepaksharda" target="_blank">LinkedIn: /in/deepaksharda</a></li>
+        <li><a href="https://github.com/dpks2003" target="_blank">GitHub: @dpks2003</a></li>
+        <li><a href="mailto:deepak.sharda@vicharak.in">Email: deepak.sharda@vicharak.in</a></li>
+        <li><a href="https://linkedin.com/in/deepak-sharda" target="_blank">LinkedIn: /in/deepak-sharda</a></li>
       </ul>
     </div>
 
     <div class="footer">
-      &copy; 2025 Deepak Sharda — Powered by LUT4
+      &copy; 2025 Deepak Sharda
     </div>
   </div>
 </body>
